# zhuchentong.cn

./: .dockerignore  .gitignore  .npmrc  AGENTS.md  Dockerfile  astro.config.ts  drizzle.config.ts  eslint.config.js  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.json  uno.config.ts
.agents/skills/iconify-skill/: AGENTS.md  LICENSE  SKILL.md  pyproject.toml
.agents/skills/iconify-skill/assets/: curated_sets.txt  intent_keywords.json
.agents/skills/iconify-skill/data/: collections.json  icons.db
.agents/skills/iconify-skill/references/: LICENSES_AND_ATTRIBUTION.md  REFERENCE.md
.agents/skills/iconify-skill/scripts/: build_index.py  doctor.py  iconify_cli.py  update_bundled_data.py
.agents/skills/iconify-skill/tests/: test_iconify.py
data/: 语文_四年级上_一类字.txt  语文_四年级上_二类字.txt  语文_四年级上_词语.txt
docs/: copybook-feature.md  copybook-font-subset.md  copybook-plan.md  wordbook_database_schema.md
scripts/: add-pos-fau.mjs  convert-nce1.mjs  convert-nce2.mjs  convert-nce3.mjs  convert-nce4.mjs  copy-fonts.mjs  fill-translations.mjs  gen-fau-words.mjs  gen-pinyin-dict.mjs  gen-pinyin-questions.mjs  import-nce1.mjs  import-nce2.mjs  import-nce3.mjs  import-nce4.mjs  rebuild-pinyin-dict.mjs  seed-chinese-grade4a.mjs  seed-fau.mjs  seed-grade3-words.mjs  seed-grade3a-sentences.mjs  seed-grade3a-words.mjs  seed-grade3b-sentences.mjs  seed-grade4a-sentences.mjs  seed-grade4a-words.mjs  seed-grade4b-sentences.mjs  seed-grade4b-words.mjs  seed-nce1.mjs  seed-sentences.mjs
scripts/fonts/: chars.txt  (+5 more)
src/: env.d.ts  middleware.ts
(+261 files in other folders)
